--- a/style.css
+++ b/style.css
@@ -4,18 +4,27 @@
     --secondary-color: #333333; /* Couleur secondaire */
     --text-color: #ffffff;      /* Couleur du texte */
     --background-color: #000000; /* Couleur de fond */
-    --primary-background-light: #90bcdf;
-    --text-color-light: #100b0b;      /* Couleur du texte */
+    --primary-background-dark: #90bcdf;
+    --text-color-dark: #100b0b;      /* Couleur du texte */
   }
+
 body {
   font-family: Arial, sans-serif;
-  background-color: #111;
-  color: #ccc;
+  background-color: #fcffff;
+  color: #0e0b0b;
   margin: 0;
   padding: 0;
 }
-.post{
+.dark-mode {
+    background-color: #0c0a0a;
+    color: #fdfdfd;
+  }
+.dark-mode .post{
     color: var(--text-color)
+
+}
+.post{
+    color: var(--text-color-dark)
 
 }
 
@@ -24,10 +33,18 @@ header {
   padding: 20px;
 }
 
-header h1 {
+.dark-mode header h1 {
   font-size: 3em;
   color: #fff;
 }
+header h1 {
+    font-size: 3em;
+    color: var(--text-color-dark);
+  }
+  
+
+
+
 
 header p, header nav {
   color: var(--primary-color);
@@ -38,6 +55,7 @@ header nav a {
   text-decoration: none;
   margin: 0 10px;
 }
+
 
 header nav a:hover {
   text-decoration: underline;
@@ -83,15 +101,22 @@ section h2 {
     font-size: 1.8em;
     margin: 40px 0 20px;
   }
-/* Formation and Certification sections */
-.formation, .certification {
+
+.formation,  .project,  .certification, .about {
+    background-color: var(--primary-background-dark);
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 800px;
+  }
+  .dark-mode .formation, .dark-mode .certification, .dark-mode .about, .dark-mode .project{
     background-color: #333;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
     max-width: 800px;
   }
-  
+
   .formation h3, .certification h3 {
     color: var(--primary-color);
     font-size: 1.2em;
@@ -113,35 +138,7 @@ section h2 {
     color: pink;
   }
 
-  /* Mode clair */
-  .light-mode {
-    background-color: #ffffff;
-    color: #121212;
-  }
-  .light-mode header h1 {
-    font-size: 3em;
-    color: var(--text-color-light);
-  }
-  
-  .light-mode a {
-    color: #0073e6;
-  }
 
-  .light-mode a:visited {
-    color: #ff69b4;
-  }
-
-  .light-mode .formation, .light-mode  .project, .light-mode  .certification, .light-mode  .about {
-    background-color: var(--primary-background-light);
-    margin: 20px auto;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 800px;
-  }
-  .light-mode .post{
-    color: var(--text-color-light)
-
-}
 
   
 
