--- a/style.css
+++ b/style.css
@@ -44,8 +44,6 @@ header h1 {
   
 
 
-
-
 header p, header nav {
   color: var(--primary-color);
 }
@@ -61,36 +59,12 @@ header nav a:hover {
   text-decoration: underline;
 }
 
-.project, .about {
-  background-color: #333; 
-  margin: 20px auto;
-  padding: 20px;
-  border-radius: 8px;
-  max-width: 800px;
-}
 
-.h2{
-    border-radius: 20px;
-    color: var(--primary-color);
-    font-size: 1.5em;
-}
-
-.project h3 {
+h3 {
   color: var(--primary-color);
   font-size: 1.5em;
 }
 
-.project p {
-  margin: 5px 0;
-}
-
-.project ul {
-  margin-top: 10px;
-}
-
-.project li {
-  margin: 5px 0;
-}
 
 section h2 {
     display: flex;
@@ -117,19 +91,19 @@ section h2 {
     max-width: 800px;
   }
 
-  .formation h3, .certification h3 {
+  .formation h3, .certification h3, .project h3 {
     color: var(--primary-color);
     font-size: 1.2em;
     margin-bottom: 10px;
   }
   
  
-  .formation ul, .certification ul {
+  .formation ul, .project ul,  .certification ul {
     margin-top: 10px;
-    padding-left: 20px;
+    padding-left: 40px;
   }
   
-  .formation li, .certification li {
+  .formation li, .project li,  .certification li{
     margin: 5px 0;
   }
 
